force-app/main/default/objects/WheelProdType__c/WheelProdType__c.object-meta.xml
<CustomObject>
    <label>Wheel Prod Type</label>
    <nameField>
        <label>Wheel Prod Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wheel Prod Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>