force-app/main/default/objects/WheelProdType__c/fields/Group3__c.field-meta.xml
<CustomField>
    <fullName>Group3__c</fullName>
    <formula>Product__r.ID_ERP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group 3</label>
    <type>Text</type>
</CustomField>