force-app/main/default/objects/WheelProdType__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Wheel Prod Types</relationshipLabel>
    <relationshipName>Wheel_Prod_Types</relationshipName>
    <type>Lookup</type>
</CustomField>