force-app/main/default/objects/WheelProdType__c/fields/ProductKind__c.field-meta.xml
<CustomField>
    <fullName>ProductKind__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kind of Product</label>
    <referenceTo>ProdKind__c</referenceTo>
    <relationshipLabel>Wheel Prod Types</relationshipLabel>
    <relationshipName>Wheel_Prod_Types</relationshipName>
    <type>Lookup</type>
</CustomField>