force-app/main/default/objects/WheelProdType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>ProductKind__c</columns>
    <columns>KindID__c</columns>
    <columns>ID_ERP__c</columns>
    <columns>Group3__c</columns>
    <columns>NameUKR__c</columns>
    <columns>NameRUS__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>